# Github-PR-agent

./: .dockerignore  .env.example  .gitignore  APP_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  Dockerfile  Dockerfile.hf  EXAMPLES.md  FEATURES.md  FILE_INDEX.md  FRAMEWORK_USED.md  GETTING_STARTED.md  GITHUB_PR_TEST_EXAMPLES.md  GROQ_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_DEMO.md  QUICK_ANSWERS.md  README.md  README.old.md  README_HF.md  START_HERE.md  SUBMISSION.md  SUCCESS.md  TESTING_REPORT.md  TEST_CODE_SAMPLES.md  USER_TESTING_GUIDE.md  WEB_TESTING_GUIDE.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  start.py  (+5 more)
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  config.py  logger.py  main.py  schemas.py  utils.py
app/agents/: base_agent.py  orchestrator.py
app/services/: github_service.py  review_service.py
static/: index.html
tests/: test_agents.py  test_api.py  test_github.py  test_orchestrator.py
